--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-.idea
-blib
+blib/
 Makefile
 Makefile.old
-Build
-_build
-MANIFEST
-MANIFEST.bak
-META.yml
-META.json
 MYMETA.yml
 MYMETA.json
-SIGNATURE
 pm_to_blib
-excludes
+Build
+_build/
+MANIFEST
+MANIFEST.bak
+MANIFEST.SKIP.bak
+META.yml
+META.json
+SIGNATURE
+.idea/
+excludes/
+reslog-*/
+reslog-*.tar*
 t/logs*/
